<resources>
    <string name="app_name">Farming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_post">add post</string>
    <string name="create_post">Create Post</string>
    <string name="create_post1">Create Post</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_email">enter email</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="create_account">Create Account</string>
    <string name="farming_app">Farming App</string>
    <string name="get_your_farming_product_here">Get your farming product here</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="farming_app1">Farming App</string>
    <string name="get_your_farming_product_here1">Get your farming product here</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_email1">Enter Email</string>
    <string name="designed_by_rahul_and_shahbaz">Designed by shahbaz</string>
    <string name="article">Article</string>

    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="order_received">Order Received</string>
    <string name="ordered_item">Ordered Item</string>
    <string name="cart_item">Cart Item</string>
    <string name="see_your_product">See Your Product</string>
    <string name="sell_product">Sell Product</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="m_price">M-Price</string>
    <string name="or">OR</string>
    <string name="continue_with">Continue with</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="art_speaks_where_words_are_unable_to_explain_frame_your_story_frame_your_soul">Art speaks where words are unable to explain. Frame your story, frame your soul.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="predict_health">Predict Health</string>
    <string name="select_image">Select Image</string>
    <string name="tomato">Tomato</string>
    <string name="cabbage">Cabbage</string>
    <string name="potato">Potato</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="buy_or_sell_history">Buy Or Sell History</string>
    <string name="purchase_item">Purchase Item</string>
    <string name="sold_item">Sold Item</string>
    <string name="faq">FAQ</string>

    <string-array name="stock_list">
        <item>In Stock</item>
        <item>Out of Stock</item>
    </string-array>

    <string-array name="category_list">
        <item>Fertilizers</item>
        <item>Pesticides</item>
        <item>Seeds</item>
        <item>Machinery</item>
    </string-array>


    <string-array name="sample_dropdown_items">
        <item>Confirmed</item>
        <item>Shipped</item>
        <item>Delivered</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="category_list1">
        <item>All</item>
        <item>Fertilizers</item>
        <item>Pesticides</item>
        <item>Seeds</item>
        <item>Machinery</item>
    </string-array>


    <string name="faq_question_1">How do I add a new product?</string>
    <string name="faq_answer_1">You can add a new product by navigating to the Sell Your Product section and filling out the required details.</string>

    <string name="faq_question_2">How can I track my order?</string>
    <string name="faq_answer_2">You can track your order by going to the My Orders section in the app, where you will see the tracking status of all your orders.</string>

    <!-- FAQ 3 -->
    <string name="faq_question_3">How do I contact customer support?</string>
    <string name="faq_answer_3">You can contact customer support through the Help and Support section in the app, or by calling the provided helpline number.</string>

    <!-- FAQ 4 -->
    <string name="faq_question_4">What is the return policy?</string>
    <string name="faq_answer_4">Our return policy allows you to return products within 15 days of delivery if they are defective or do not meet your expectations.</string>
</resources>