<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignUpFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/farming_app"
        android:textAlignment="gravity"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/get_your_farming_product_here"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/sign_up_here"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingStart="25dp"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <EditText
        android:id="@+id/Emailorphone"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:paddingStart="25dp"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />


    <EditText
        android:id="@+id/Loginpassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:hint="@string/enter_the_password"
        android:inputType="textWebPassword"
        android:paddingStart="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/Emailorphone"
        app:layout_constraintStart_toStartOf="@+id/Emailorphone"
        app:layout_constraintTop_toBottomOf="@+id/Emailorphone" />

    <EditText
        android:id="@+id/cnfpassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textWebPassword"
        android:paddingStart="25dp"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/Emailorphone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Emailorphone"
        app:layout_constraintTop_toBottomOf="@+id/Loginpassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape0"
        android:text="@string/create_account"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnfpassword" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/green"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>