<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainscreen.ProfileFragment">

        <ImageView
            android:id="@+id/imageEdit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="14sp"
            android:elevation="0.1dp"
            android:src="@drawable/baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />


        <ImageView
            android:id="@+id/userBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/light_green"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/uploadUserBackgroundImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_camera_24"
            app:layout_constraintBottom_toBottomOf="@id/userBackgroundImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/userBackgroundImage"
            app:tint="@color/green" />

        <ProgressBar
            android:id="@+id/uploadBackProgressCover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/userBackgroundImage"
            app:layout_constraintEnd_toEndOf="@+id/userBackgroundImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userBackgroundImage" />

        <ProgressBar
            android:id="@+id/uploadBackProgressProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/userBackgroundImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/userBackgroundImage" />

        <androidx.cardview.widget.CardView
            android:id="@+id/userImageCardUserFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/userImageUserFrag"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:scaleType="fitXY"
                android:src="@color/green" />

            <ImageView
                android:id="@+id/uploadProfilePictureImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/profile" />

            <ProgressBar
                android:id="@+id/uploadProgressBarProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userNameUserProfileFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:text="Shahbaz ahamad"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userImageCardUserFrag"
            app:layout_constraintTop_toBottomOf="@id/userBackgroundImage" />

        <TextView
            android:id="@+id/userEmailUserProfileFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:text="smusalman559@rku.ac.in"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/userImageCardUserFrag"
            app:layout_constraintTop_toBottomOf="@id/userImageCardUserFrag" />

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/buy_or_sell_history"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userEmailUserProfileFrag" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHistory">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/green" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/purchase_item"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/sold_item"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <ir.mahozad.android.PieChart
            android:id="@+id/pieChart"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutLabel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

